body overflow fix

--- a/Style.css
+++ b/Style.css
@@ -114,13 +114,11 @@ button{
     margin-left:40px;
     width: 670px;
     margin-top: -40px;
-    
-    
 }
 .button3{
     display: flex;
     flex-direction: column;
-    width: 1090px;
+
 }
 .button3 a{
     color: white;
